@@ -1,21 +1,21 @@
-typevar-name-incorrect-variance:7:0:7:4::"Type variable ""T_co"" is invariant, use ""T"" instead":INFERENCE
-typevar-name-incorrect-variance:8:0:8:8::"Type variable ""T_contra"" is invariant, use ""T"" instead":INFERENCE
-typevar-name-incorrect-variance:9:0:9:14::"Type variable ""ScoresT_contra"" is invariant, use ""ScoresT"" instead":INFERENCE
-typevar-name-incorrect-variance:17:0:17:5::"Type variable ""CT_co"" is contravariant, use ""CT_contra"" instead":INFERENCE
-typevar-name-incorrect-variance:18:0:18:9::"Type variable ""CT_contra"" is invariant, use ""CT"" instead":INFERENCE
-typevar-name-incorrect-variance:22:0:22:2::"Type variable ""VT"" is covariant, use ""VT_co"" instead":INFERENCE
-typevar-name-incorrect-variance:23:0:23:9::"Type variable ""VT_contra"" is covariant, use ""VT_co"" instead":INFERENCE
-typevar-name-incorrect-variance:28:0:28:5::"Type variable ""VT_co"" is invariant, use ""VT"" instead":INFERENCE
-typevar-name-incorrect-variance:29:0:29:9::"Type variable ""VT_contra"" is invariant, use ""VT"" instead":INFERENCE
-typevar-name-incorrect-variance:31:0:31:2::"Type variable ""VT"" is covariant, use ""VT_co"" instead":INFERENCE
-typevar-name-incorrect-variance:33:0:33:9::"Type variable ""VT_contra"" is covariant, use ""VT_co"" instead":INFERENCE
-typevar-name-incorrect-variance:38:0:38:5::"Type variable ""VT_co"" is invariant, use ""VT"" instead":INFERENCE
-typevar-name-incorrect-variance:41:0:41:9::"Type variable ""VT_contra"" is invariant, use ""VT"" instead":INFERENCE
-typevar-name-incorrect-variance:45:0:45:2::"Type variable ""VT"" is contravariant, use ""VT_contra"" instead":INFERENCE
-typevar-name-incorrect-variance:46:0:46:5::"Type variable ""VT_co"" is contravariant, use ""VT_contra"" instead":INFERENCE
-typevar-name-incorrect-variance:52:0:52:5::"Type variable ""VT_co"" is invariant, use ""VT"" instead":INFERENCE
-typevar-name-incorrect-variance:55:0:55:9::"Type variable ""VT_contra"" is invariant, use ""VT"" instead":INFERENCE
-typevar-name-incorrect-variance:61:4:61:6::"Type variable ""VT"" is covariant, use ""VT_co"" instead":INFERENCE
-typevar-name-incorrect-variance:62:4:62:13::"Type variable ""VT_contra"" is covariant, use ""VT_co"" instead":INFERENCE
-typevar-name-incorrect-variance:64:7:64:16::"Type variable ""VT_contra"" is covariant, use ""VT_co"" instead":INFERENCE
-typevar-name-incorrect-variance:67:5:67:14::"Type variable ""VT_contra"" is covariant, use ""VT_co"" instead":INFERENCE
+typevar-name-incorrect-variance:7:0:7:4::"Type variable name does not reflect variance. ""T_co"" is invariant, use ""T"" instead":INFERENCE
+typevar-name-incorrect-variance:8:0:8:8::"Type variable name does not reflect variance. ""T_contra"" is invariant, use ""T"" instead":INFERENCE
+typevar-name-incorrect-variance:9:0:9:14::"Type variable name does not reflect variance. ""ScoresT_contra"" is invariant, use ""ScoresT"" instead":INFERENCE
+typevar-name-incorrect-variance:17:0:17:5::"Type variable name does not reflect variance. ""CT_co"" is contravariant, use ""CT_contra"" instead":INFERENCE
+typevar-name-incorrect-variance:18:0:18:9::"Type variable name does not reflect variance. ""CT_contra"" is invariant, use ""CT"" instead":INFERENCE
+typevar-name-incorrect-variance:22:0:22:2::"Type variable name does not reflect variance. ""VT"" is covariant, use ""VT_co"" instead":INFERENCE
+typevar-name-incorrect-variance:23:0:23:9::"Type variable name does not reflect variance. ""VT_contra"" is covariant, use ""VT_co"" instead":INFERENCE
+typevar-name-incorrect-variance:28:0:28:5::"Type variable name does not reflect variance. ""VT_co"" is invariant, use ""VT"" instead":INFERENCE
+typevar-name-incorrect-variance:29:0:29:9::"Type variable name does not reflect variance. ""VT_contra"" is invariant, use ""VT"" instead":INFERENCE
+typevar-name-incorrect-variance:31:0:31:2::"Type variable name does not reflect variance. ""VT"" is covariant, use ""VT_co"" instead":INFERENCE
+typevar-name-incorrect-variance:33:0:33:9::"Type variable name does not reflect variance. ""VT_contra"" is covariant, use ""VT_co"" instead":INFERENCE
+typevar-name-incorrect-variance:38:0:38:5::"Type variable name does not reflect variance. ""VT_co"" is invariant, use ""VT"" instead":INFERENCE
+typevar-name-incorrect-variance:41:0:41:9::"Type variable name does not reflect variance. ""VT_contra"" is invariant, use ""VT"" instead":INFERENCE
+typevar-name-incorrect-variance:45:0:45:2::"Type variable name does not reflect variance. ""VT"" is contravariant, use ""VT_contra"" instead":INFERENCE
+typevar-name-incorrect-variance:46:0:46:5::"Type variable name does not reflect variance. ""VT_co"" is contravariant, use ""VT_contra"" instead":INFERENCE
+typevar-name-incorrect-variance:52:0:52:5::"Type variable name does not reflect variance. ""VT_co"" is invariant, use ""VT"" instead":INFERENCE
+typevar-name-incorrect-variance:55:0:55:9::"Type variable name does not reflect variance. ""VT_contra"" is invariant, use ""VT"" instead":INFERENCE
+typevar-name-incorrect-variance:61:4:61:6::"Type variable name does not reflect variance. ""VT"" is covariant, use ""VT_co"" instead":INFERENCE
+typevar-name-incorrect-variance:62:4:62:13::"Type variable name does not reflect variance. ""VT_contra"" is covariant, use ""VT_co"" instead":INFERENCE
+typevar-name-incorrect-variance:64:7:64:16::"Type variable name does not reflect variance. ""VT_contra"" is covariant, use ""VT_co"" instead":INFERENCE
+typevar-name-incorrect-variance:67:5:67:14::"Type variable name does not reflect variance. ""VT_contra"" is covariant, use ""VT_co"" instead":INFERENCE
